--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
     margin: 0;
@@ -25,8 +24,8 @@ body {
 
 .main-container {
     width: 100%;
-    max-width: 1440px;
-    padding: 0 20px;
+    max-width: 100%;
+    padding: 0 10px;
     box-sizing: border-box;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -88,8 +87,9 @@ header .navigation a:hover::before {
     width: 100%;
 }
 
-/****** Formulaire de recherche ***********/
-
+.section-title {
+    margin-bottom: 20px; 
+}
 /****** Formulaire de recherche ***********/
 .search-form {
     display: flex;
@@ -153,6 +153,7 @@ header .navigation a:hover::before {
 
 /* Adjustments for text alignment and margins */
 .search-section {
+    margin-top: 40px;
     text-align: left;
     margin-bottom: 20px;
 }
