--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,11 @@
 }
 
 body {
-    background-color: var(--main-bg-color);
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
 }
+
 
 .main-container {
     width: 100%;
