--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ body {
     box-sizing: border-box;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-left: 25px solid #ffffff; /* Bordure gauche blanche */
+    border-right: 25px solid #ffffff; /* Bordure droite blanche */
 }
 
 a {
@@ -68,10 +70,17 @@ header .navigation li {
 header .navigation a {
     position: relative;
     text-decoration: none;
-    color: var(--main-color);
+    color: black;
     font-weight: 500;
     padding: 5px 10px;
     transition: background-color 0.3s;
+    padding-top: 26px ;
+}
+
+
+header .navigation a:hover {
+    color: var(--main-color);
+
 }
 
 header .navigation a::before {
@@ -106,7 +115,6 @@ header .navigation a:hover::before {
 }
 
 .search-form .search-icon {
-    background-color: #ffffff;
     padding: 0 15px;
     display: flex;
     align-items: center;
@@ -212,7 +220,6 @@ header .navigation a:hover::before {
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 10px 20px;
     background-color: transparent; /* Make background transparent */
     margin-top: 20px; /* Space between filters and info bar */
     font-size: 16px;
@@ -231,6 +238,7 @@ header .navigation a:hover::before {
 .filters {
     display: flex;
     gap: 10px;
+    align-items: center;
 }
 
 /* Hébergements And Populaires Section */
@@ -239,7 +247,6 @@ header .navigation a:hover::before {
     justify-content: space-between;
     gap: 20px;
     margin-top: 20px;
-    padding: 20px;
     border-radius: 20px;
 }
 
@@ -262,15 +269,14 @@ header .navigation a:hover::before {
     overflow: hidden;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
     transition: transform 0.3s;
+    border: 5px solid #ffffff;
 }
 
-.hebergement-cards .card:hover {
-    transform: scale(1.05);
-}
+
 
 .hebergement-cards img {
     width: 100%;
-    height: 150px;
+    height: 110px;
     object-fit: cover;
 }
 
@@ -346,9 +352,6 @@ header .navigation a:hover::before {
     margin-bottom: 20px;
 }
 
-.populaires-cards .card:hover {
-    transform: scale(1.05);
-}
 
 .populaires-cards img {
     width: 40%;
