--- a/css/style.css
+++ b/css/style.css
@@ -265,11 +265,12 @@ header .navigation a:hover::before {
 
 .hebergement-cards .card {
     background-color: var(--card-bg-color); /* Couleur de fond gris pour les cartes */
-    border-radius: 20px;
     overflow: hidden;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
     transition: transform 0.3s;
     border: 5px solid #ffffff;
+    border-radius: 20px;
+    
 }
 
 
@@ -350,7 +351,11 @@ header .navigation a:hover::before {
     background-color: #fff;
     transition: transform 0.3s ease;
     margin-bottom: 20px;
+    
+    border: 5px solid #ffffff;
+    border-radius: 20px;
 }
+
 
 
 .populaires-cards img {
@@ -436,7 +441,7 @@ header .navigation a:hover::before {
 
 .activities-cards img {
     width: 100%;
-    height: 400px;
+    height: 200px;
     object-fit: cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -499,6 +504,8 @@ footer {
 
 /* Tablette */
 @media (max-width: 1024px) {
+
+   
     .hebergements-and-populaires {
         flex-direction: column;
         gap: 20px;
@@ -587,6 +594,8 @@ footer {
         padding: 0;
         box-sizing: border-box;
         background-color: #fff;
+        border-left: 0;
+        border-right: 0;
     }
     .section-title {
         margin-top: 20px; 
@@ -600,10 +609,9 @@ footer {
 
     .hebergements, .populaires, .activities {
         width: 100%;
-        padding: 0; /* Supprimez le padding pour toute la largeur */
+        padding: 20px; /* Supprimez le padding pour toute la largeur */
         margin: 0; /* Supprimez les marges pour toute la largeur */
         border-radius: 0; /* Supprimez les bordures arrondies */
-        background-color: var(--section-bg-color);
     }
 
     .hebergement-cards, .populaires-cards, .activities-cards {
@@ -616,7 +624,6 @@ footer {
         width: 100%;
         max-width: 100%;
         margin: 0 auto;
-        padding: 15px;
     }
 
     img {
@@ -691,11 +698,11 @@ footer {
     .search-section {
         width: 100%;
         margin-top: 20px;
+        padding: 10px;
     }
 
     .search-form {
         width: 100%;
-        height: auto;
         flex-direction: row;
         border-radius: 25px;
     }
@@ -710,7 +717,7 @@ footer {
 
     .search-form .search-button {
         padding: 10px;
-        border-radius: 0 25px 25px 0;
+        border-radius: 15px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -746,7 +753,6 @@ footer {
     .populaires-cards {
         display: flex;
         flex-direction: column;
-        padding: 15px;
         margin-bottom: 20px;
     }
 
@@ -828,7 +834,7 @@ footer {
     .hebergements,
     .activities {
         width: 100%;
-        padding: 10px;
+        padding: 20px;
     }
 
     .hebergements-and-populaires {
